--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.database=broker-gateway
-spring.rabbitmq.host=pipipan.cn
+spring.data.mongodb.database=venus
+spring.rabbitmq.host=localhost
