--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -2,4 +2,4 @@ spring.data.mongodb.database=broker-gateway
 spring.data.mongodb.host=mongo
 axon.axonserver.servers=axonserver
 spring.rabbitmq.host=rabbitmq
-spring.redis.host=redis
+#spring.redis.host=redis
