--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!--        security    -->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
