--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>2.1.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>cn.pipipan.eisproject</groupId>
+    <groupId>macoredroid</groupId>
     <artifactId>brokergateway-ddd</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>brokergateway-ddd</name>
-    <description>Demo project for Spring Boot</description>
+    <name>brokergateway</name>
+    <description>broker-gateway</description>
 
     <properties>
         <java.version>1.8</java.version>
