--- a/.drone.yml
+++ b/.drone.yml
@@ -13,21 +13,22 @@ steps:
     when:
       branch:
         - master
+        - master-*
         - dev
 
 
   - name: docker
     image: plugins/docker
     settings:
-      username: wwwumr
-      password:
+      username: macoredroid
+      password: c7o2r1e4
         from_secret: dockerhub_secrets
       repo: macoredroid/broker-gateway
       tags:
-        - v1.0.0
+        - v1.0.1
     when:
       branch:
-        - master
+        - master-*
 
 services:
   - name: mongo
