--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.database=broker-gateway
+spring.data.mongodb.database=venus
 spring.data.mongodb.host=mongo
-axon.axonserver.servers=axonserver
+axon.axonserver.servers=axonserver.development.svc.cluster.local
 spring.rabbitmq.host=rabbitmq
