--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,4 +1,5 @@
 spring.data.mongodb.database=venus
 spring.data.mongodb.host=mongo
 axon.axonserver.servers=axonserver.development.svc.cluster.local
+spring.main.allow-bean-definition-overriding=true
 spring.rabbitmq.host=rabbitmq
