--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-spring.data.mongodb.database=venus
-spring.rabbitmq.host=localhost
-spring.main.allow-bean-definition-overriding=true
+spring.profiles.active=@spring.profiles.active@
