--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,3 +1,4 @@
+spring.main.allow-bean-definition-overriding=true
 spring.data.mongodb.database=venus
 spring.data.mongodb.host=mongo
 axon.axonserver.servers=axonserver.development.svc.cluster.local
