--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -3,3 +3,5 @@ spring.data.mongodb.database=venus
 spring.data.mongodb.host=mongo
 axon.axonserver.servers=axonserver.development.svc.cluster.local
 spring.rabbitmq.host=rabbitmq
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = create
