--- a/.drone.yml
+++ b/.drone.yml
@@ -23,7 +23,7 @@ steps:
     settings:
       username: zhiyuanma0401
       password:
-        from_secret: macoredroid
+        from_secret: zhiyuanma0401
       repo: registry.cn-hangzhou.aliyuncs.com/macoredroid/broker-gateway
       registry: registry.cn-hangzhou.aliyuncs.com
       tags:
