--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -8,4 +8,5 @@ axon.axonserver.servers=axonserver.development.svc.cluster.local
 spring.rabbitmq.host=mu-rabbit-rabbitmq.development.svc.cluster.local
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create
+spring.rabbitmq.username=user
 spring.rabbitmq.password=nn4riSQSR1
