--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,12 +1,12 @@
 spring.main.allow-bean-definition-overriding=true
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=root
-spring.data.mongodb.password=3QHMy2IMan
+spring.data.mongodb.password=Usbtpa8YRH
 spring.data.mongodb.database=venus
-spring.data.mongodb.host=mongodb-1591869764.development.svc.cluster.local
-axon.axonserver.servers=axonserver.development.svc.cluster.local
-spring.rabbitmq.host=mu-rabbit-rabbitmq.development.svc.cluster.local
+spring.data.mongodb.host=mongodb-1591923991.brokerone.svc.cluster.local
+axon.axonserver.servers=axonserver.brokerone.svc.cluster.local
+spring.rabbitmq.host=mu-rabbit-rabbitmq.brokerone.svc.cluster.local
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create
 spring.rabbitmq.username=user
-spring.rabbitmq.password=nn4riSQSR1
+spring.rabbitmq.password=kDSOi5wltP
